small changes and impvovments. fixed some alignments and styles, and removed commented code

--- a/Frontend/css/main.css
+++ b/Frontend/css/main.css
@@ -352,6 +352,12 @@ h5 {
     width: 100%;
     min-height: 0%;
 }
+.modal-btn-close {
+    background-color: white;
+    border: 2px solid black;
+    height: 70% !important;
+    width: 70% !important;
+}
 
 /* IMAGE MODAL LAYOUT AND GRID */
 .image-modal-content{
